--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "your-name-here/Nuxtified",
+    "name": "rchavik/nuxtified",
     "description": "Nuxtified plugin for CakePHP",
     "type": "cakephp-plugin",
     "license": "MIT",
