--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -17,7 +17,8 @@
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.0.0",
-    "nuxt-log": "^0.1.0"
+    "nuxt-log": "^0.1.0",
+    "vue-api-query": "^1.5.1"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.3.1",
