Update package name

--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "croogo-clean-blog",
-  "version": "1.0.0",
+  "name": "nuxtified",
+  "version": "0.0.1",
   "description": "Croogo Clean Blog with Nuxt",
   "author": "Rachman Chavik",
   "private": true,
